# internal/dto/settings.go
@@ -17,6 +17,7 @@ type UpdateNameRequest struct {
 type ProfileResponse struct {
 	TgID                 int64                `json:"telegram_id"`
 	Name                 string               `json:"name"`
+	WalletAddress        *string              `json:"wallet_address"`
 	Language             entity.Language      `json:"language"`
 	ReceiveNotifications bool                 `json:"receive_notifications"`
 	PreferredMode        entity.PreferredMode `json:"preferred_mode"`
@@ -28,10 +29,15 @@ func ProfileResponseFrom(u *entity.User, s *entity.UserSettings) ProfileResponse
 	return ProfileResponse{
 		TgID:                 u.TgID,
 		Name:                 u.Name,
+		WalletAddress:        u.WalletAddress,
 		Language:             s.Language,
 		ReceiveNotifications: s.ReceiveNotifications,
 		PreferredMode:        s.PreferredMode,
 		OnboardingFinished:   s.OnboardingFinished,
 		Theme:                s.Theme,
 	}
+}
+
+type LinkWalletRequest struct {
+	Address string `json:"address" validate:"required"`
 }
